# 2D-shoot-em-up

./: CMakeLists.txt  README.md  doInput.cpp  doInput.h  draw.cpp  draw.h  init.cpp  init.h  main.cpp  readme.txt  stage.cpp  stage.h  structs.cpp  structs.h  variables.h
cmake_modules/: FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
